--- a/style.css
+++ b/style.css
@@ -1,21 +1,102 @@
-* {
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-
-}
-
-body{
-    font-family: 'Poppins', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Questrial', sans-serif;
     background-color: #f0f2f5;
-    color: green;
 }
-main{
-    height: 70vh;
-    width: 80vw;
-    position: relative;
-    margin: 0 aut;
+.h1{
+    position: absolute;
+    left: 10%;
+    top: 40%;
+    width: 550px;
+    
+}
+.h{
+    font-size: 60px;
+    margin-bottom: 5px;
+    color: #1877f2;
+}
+.pr{
+    font-size: 30px;
+}
+.main{
+    position: absolute;
+    background-color: #fff;
+    width: 420px;
+    height: 420px;
+    left: 55%;
+    top: 20%;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 9px rgb(184, 184, 184),
+                -1px -1px 5px rgb(184, 184, 184);
+}
+.txt{
+    margin: 10px;
+    margin-top: 20px;
+    padding: 20px;
+    width: 85%;
+    background-color: #fff;
+    outline: none;
+    border: 1px solid rgb(184, 184, 184);
+    border-radius: 5px;
+    font-size: 15px; 
+      
+}
+.txt:focus{
+    border: 1px solid #1877f2;
+    box-shadow: 1px 1px 1px #1877f2,
+                -1px -1px 1px #1877f2;
+}
+.login-btn{
+   
+    margin: 10px ;
+    padding: 15px;
+    width: 95%;
+    border-radius: 5px;
+    background-color: #1877f2;
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    font-weight: bolder;
 
+}
+.a-link{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 50px;
+    border-bottom: 1px solid rgb(184, 184, 184) ;
+    margin: 20px;
+    background: none;
+}
+.link{
+    background: none;
+    text-decoration: none;
+    color: #1877f2;
+}
+
+
+.ca{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 95px;
+    width: 50%;
+    
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #42b72a;
+    border-radius: 5px;
+}
+.pca{
+    text-decoration: none;
+    background: none;
+    color: #fff;
+    font-weight: bolder;
+    font-size: 17px;
+    
 }
 footer {
     height: 30vh;
@@ -182,6 +263,6 @@ footer ol li a:hover {
 }
 
 footer small{
-    font-size: 11px;
+    font-size: 10px;
 
 }
